--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 		<meta charset="UTF-8">
+        <meta name="robots" content="noindex, nofollow" />
 		<title>Page d'accueil du projet</title>
 	</head>
 	<body>
