--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 		<title>Page d'accueil du projet</title>
 	</head>
 	<body>
-        Hello World ! =)
+        <section>
+            <h1>Projet Monceau Web</h1>
+            <p>Bienvenue sur la page d'accueil du projet de création d'un site web pour l'associaiton Frédéric Ozanam.</p>
+            
+            <h2>Gestion du projet</h2>
+            <ul>
+                <li><a herf="https://github.com/shavounet/monceau-web/issues/milestones">Avancement du projet</a></li>
+                <li><a herf="https://github.com/shavounet/monceau-web/issues">Bugs et suggestions</a></li>
+            </ul>
+            
+            <h2>Maquettes</h2>
+        </section>
 	</body>
 </html>
