Fix on project page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             
             <h2>Gestion du projet</h2>
             <ul>
-                <li><a herf="https://github.com/shavounet/monceau-web/issues/milestones">Avancement du projet</a></li>
-                <li><a herf="https://github.com/shavounet/monceau-web/issues">Bugs et suggestions</a></li>
+                <li><a href="https://github.com/shavounet/monceau-web/issues/milestones">Avancement du projet</a></li>
+                <li><a href="https://github.com/shavounet/monceau-web/issues">Bugs et suggestions</a></li>
             </ul>
             
             <h2>Maquettes</h2>
